[package]
name = "cosmwasm-examples"
version = "0.1.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
# this is not meant to be published as a crate
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# these are placeholders for common features in the contracts, so we can use them with cargo test --all
backtraces = []
cranelift = []
singlepass = []

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true


[dependencies]
