[package]
name = "erc20"
description = "An implementation of the ERC20 token interface"
version = "0.1.0"
authors = ["Simon Warta <webmaster128@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = ["cranelift"]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = [ "cosmwasm/backtraces", "cosmwasm-vm/backtraces" ]
cranelift = [ "cosmwasm-vm/default-cranelift"]
singlepass = [ "cosmwasm-vm/default-singlepass"]

[dependencies]
cosmwasm = { version = "0.5.1" }
schemars = "0.5"
serde = { version = "1.0.60", default-features = false, features = ["derive"] }
snafu = { version = "0.5.0", default-features = false, features = ["rust_1_30"] }
sha2 = "0.8.0"
hex = "0.4.0"
# needed for wasm-pack build process
wasm-bindgen = "0.2"

[dev-dependencies]
cosmwasm-vm = { version = "0.5.1", default-features = false }
serde_json = "1.0"
