[package]
name = "cw-quadratic-funding"
version = "0.2.0"
authors = ["orkunkl <kulceorkun@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true


[dependencies]
cosmwasm-std = { version = "1.0.0-beta" }
cw-storage-plus = { version = "0.10.0", features = ["iterator"]}
cw0 = "0.10.0"
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
integer-sqrt = "0.1.5"

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta" }
